<?xml version="1.0"?>
<package>
  <name>raspicat_gamepad_controller</name>
  <version>0.0.1</version>
  <description>The raspicat_gamepad_controller package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>

  <author email="ryo.okazaki.0929@gmail.com">Ryo Okazaki</author>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>BSD</license>

  <url type="repository">https://github.com/rt-net/raspicat_gamepad_controller</url>
  <url type="bugtracker">https://github.com/rt-net/raspicat_gamepad_controller/issues</url>
  <url type="website">https://github.com/rt-net/raspicat_gamepad_controller/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>ps3joy</run_depend>

  <export>
  </export>
</package>
